Update config with new promocampaign thing table
Adds promocampaign table (needed for the PromoCampaign model introduced in the
previous commit) to example.ini

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -229,6 +229,7 @@ db_table_jury_account_link = relation, account, link
 db_table_ad = thing
 db_table_adsr = relation, ad, subreddit
 db_table_flair = relation, subreddit, account
+db_table_promocampaign = thing
 
 # which servers to find each table on (likely to change in .update files)
 # first server listed is assumed to be the master, all others are read-only slaves
@@ -257,6 +258,7 @@ db_servers_jury_account_link = main
 db_servers_ad = main
 db_servers_adsr = main
 db_servers_flair = main
+db_servers_promocampaign = main
 
 
 ## -- traffic analytics --
