Process traffic logs on Amazon EMR.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -328,6 +328,16 @@ min_promote_bid = 20
 max_promote_bid = 9999
 min_promote_future = 2
 
+# traffic log processing
+TRAFFIC_ACCESS_KEY =
+TRAFFIC_SECRET_KEY =
+RAW_LOG_DIR =
+PROCESSED_DIR =
+AGGREGATE_DIR =
+AWS_LOG_DIR =
+TRAFFIC_SRC_DIR =
+TRAFFIC_LOG_HOSTS = 
+
 # -- spreadshirt --
 spreadshirt_url = 
 spreadshirt_vendor_id =
