Losslessly optimize JPEGs.
Disabled by default in example.ini. Install jpegoptim
or an equivalent and set the configuration properly.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -349,6 +349,8 @@ translator_password =
 takedown_sr = _takedowns
 # png compressor
 png_optimizer = /usr/bin/env optipng
+# jpeg compressor
+jpeg_optimizer =
 
 # -- search --
 # where is solor?
