Randomly assign comment tree implementation to new links.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -555,3 +555,6 @@ sr_discovery_links =
 spotlight_interest_sub_p = .05
 # and for users that have not ever subscribed:
 spotlight_interest_nosub_p = .1
+# map of comment tree version to how frequently it should be chosen relative to
+# the others
+comment_tree_version_weights = 1:9, 2:1
