--- a/r2/example.ini
+++ b/r2/example.ini
@@ -477,6 +477,10 @@ feedback_email = reddit@gmail.com
 # Special case sensitive domains
 case_sensitive_domains = i.imgur.com, youtube.com
 
+# Location (directory) for temp files for diff3 merging
+# Empty will use python default for temp files
+diff3_temp_location = /dev/shm
+
 [server:main]
 use = egg:Paste#http
 host = 0.0.0.0
