Wiki: Base wiki code
- Updates snudown dep

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -35,8 +35,6 @@ log_start = true
 amqp_logging = false
 # emergency measures: makes the site read only
 read_only_mode = false
-# global switch for wiki write permissions
-allow_wiki_editing = true
 # a modified read only mode used for cache shown during heavy load 503s
 heavy_load_mode = false
 # directory to write cProfile stats dumps to (disabled if not set)
@@ -424,9 +422,6 @@ ADMIN_COOKIE_MAX_IDLE = 900
 # the maximum life of an otp cookie
 OTP_COOKIE_TTL = 604800
 
-# min amount of karma to edit 
-WIKI_KARMA = 100
-
 # time in days
 MODWINDOW = 2
 HOT_PAGE_AGE = 1000
@@ -460,6 +455,8 @@ agents =
 sr_banned_quota = 10000
 sr_moderator_quota = 10000
 sr_contributor_quota = 10000
+sr_wikibanned_quota = 10000
+sr_wikicontributor_quota = 10000
 sr_quota_time = 7200
 
 # -- email --
@@ -477,9 +474,25 @@ feedback_email = reddit@gmail.com
 # Special case sensitive domains
 case_sensitive_domains = i.imgur.com, youtube.com
 
+# Number of days to keep recent wiki revisions for
+wiki_keep_recent_days = 7
+
+# Max number of bytes for wiki pages
+wiki_max_page_length_bytes = 262144
+
+# Max wiki page name length
+wiki_max_page_name_length = 128
+
+# Max number of separators in a wiki page name
+wiki_max_page_separators = 3
+
+# Disable wiki editing and viewing for everyone except admins
+wiki_disabled = false
+
 # Location (directory) for temp files for diff3 merging
 # Empty will use python default for temp files
-diff3_temp_location = /dev/shm
+#   Pro tip: Use /dev/shm for in-memory diff3
+diff3_temp_location =
 
 [server:main]
 use = egg:Paste#http
