wiki: Rename wiki_disabled to disable_wiki.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -81,6 +81,9 @@ disable_captcha = false
 disable_ratelimit = false
 disable_require_admin_otp = false
 
+# Disable wiki editing and viewing for everyone except admins
+disable_wiki = false
+
 # -- important settings -- 
 # the domain that this app serves itself up as
 domain = reddit.local
@@ -513,9 +516,6 @@ wiki_max_page_name_length = 128
 
 # Max number of separators in a wiki page name
 wiki_max_page_separators = 3
-
-# Disable wiki editing and viewing for everyone except admins
-wiki_disabled = false
 
 # Location (directory) for temp files for diff3 merging
 # Empty will use python default for temp files
