Subreddit CSS: Store subreddit CSS on S3 and minify it.
This means that stylesheets can have all the advantages of other static
files, such as not having session cookies in the request. In addition,
it also means that subreddit objects are drastically smaller in memcache
which saves internal bandwidth and increases cache capacity.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -352,6 +352,9 @@ static_secure_domain =
 # this is for hosts that don't do on-the-fly gzipping (e.g. s3)
 static_pre_gzipped = false
 static_secure_pre_gzipped = false
+# which s3 bucket to place subreddit styles on (when empty, stylesheets will be served
+# from the local database instead.
+static_stylesheet_bucket =
 
 #  -- translator UI -- 
 # enable/disable access to the translation UI in /admin/i18n
