Subreddit CSS: Make /about/stylesheet show unminified CSS.
This is for non-moderators to be able to view the commented / unminified
CSS so they can learn / cherry-pick bits from it.

This uses highlight.js from
isagalaev/highlight.js@45c03cd045e2b9c87379bfe7c0f8eb47bf620f48.

--- a/r2/Makefile
+++ b/r2/Makefile
@@ -95,7 +95,7 @@ clean_ini:
 
 #################### CSS file lists
 SPRITED_STYLESHEETS += reddit.css compact.css
-OTHER_STYLESHEETS := reddit-ie6-hax.css reddit-ie7-hax.css mobile.css
+OTHER_STYLESHEETS := reddit-ie6-hax.css reddit-ie7-hax.css mobile.css highlight.css
 
 #################### Static Files
 STATIC_ROOT := r2/public
