Change moderator adding to an invite system.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -456,7 +456,7 @@ comment_visits_period = 600
 agents = 
 # subreddit ratelimits
 sr_banned_quota = 10000
-sr_moderator_quota = 10000
+sr_moderator_invite_quota = 10000
 sr_contributor_quota = 10000
 sr_wikibanned_quota = 10000
 sr_wikicontributor_quota = 10000
