Add missing gold checkout stuff to example.ini.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -60,6 +60,21 @@ CLOUDSEARCH_DOC_API =
 CLOUDSEARCH_SUBREDDIT_SEARCH_API =
 CLOUDSEARCH_SUBREDDIT_DOC_API =
 
+# for gold purchases.
+PAYPAL_URL = https://www.paypal.com/cgi-bin/webscr
+PAYPAL_SECRET =
+PAYPAL_BUTTONID_ONETIME_BYMONTH   =
+PAYPAL_BUTTONID_ONETIME_BYYEAR    =
+PAYPAL_BUTTONID_AUTORENEW_BYMONTH =
+PAYPAL_BUTTONID_AUTORENEW_BYYEAR  =
+PAYPAL_BUTTONID_CREDDITS_BYMONTH  =
+PAYPAL_BUTTONID_CREDDITS_BYYEAR   =
+
+GOOGLE_ID =
+GOOGLE_KEY =
+GOOGLE_REQUEST_URL = https://checkout.google.com/api/checkout/v2/request/Merchant/
+GOOGLE_REPORT_URL = https://checkout.google.com/api/checkout/v2/reports/Merchant/
+
 # -- feature toggles --
 disable_ads = false
 disable_captcha = false
