Add email link to promo traffic help page

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -313,6 +313,7 @@ payment_domain = https://pay.reddit.local/
 ad_domain = http://reddit.local
 allowed_pay_countries = United States, United Kingdom, Canada
 sponsors =
+selfserve_support_email = selfservesupport@mydomain.com 
 
 # authorize.net credentials (blank authorizenetapi to disable)
 authorizenetapi =
