Add js.py/strings.py as deps to JS modules.
If either python file changes, we may need to change the compiled JS
files. We'll take the conservative approach and always rebuild.

--- a/r2/Makefile
+++ b/r2/Makefile
@@ -189,7 +189,7 @@ clean_css:
 js: $(STATIC_BUILDSTAMP) $(JS_OUTPUTS)
 
 define JS_MODULE_TEMPLATE
-$(JS_MODULE_OUTPUTS_$(1)): $(JS_MODULE_DEPS_$(1))
+$(JS_MODULE_OUTPUTS_$(1)): $(JS_MODULE_DEPS_$(1)) r2/lib/js.py
 	# remove mangled output symlinks, similar to above.
 	rm -f $(JS_MODULE_OUTPUTS_$(1))
 	paster run standalone r2/lib/js.py -c "build_module('$(1)')"
