Move gold prices to configuration parameters.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -420,6 +420,10 @@ media_domain = localhost
 # Embedly API Key
 embedly_api_key =
 
+# -- prices --
+gold_month_price = 3.99
+gold_year_price = 29.99
+
 # -- limits --
 # rate limiter duration (minutes)
 RATELIMIT = 10
