Shard vote_link_qs by last digit of subreddit ID.
This should help with permacache contention.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -337,6 +337,10 @@ spreadshirt_test_font =
 # Other magic settings
 ###
 
+# should we split link votes into separate queues based on subreddit id?
+# this helps with lock contention but isn't necessary on smaller sites
+shard_link_vote_queues = false
+
 # list of cnames allowed to render as reddit.com without a frame
 authorized_cnames = 
 
