Ignore reports older than the report age limit.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -440,6 +440,8 @@ QUOTA_THRESHOLD = 5
 REPLY_AGE_LIMIT = 180
 # Links and comments older than this many days can't be voted on
 VOTE_AGE_LIMIT = 180
+# Reports on links and comments older than this many days are ignored
+REPORT_AGE_LIMIT = 180
 # minimum age, in days, of an account to be eligible to create a community
 min_membership_create_community = 30
 # the maximum life of an admin cookie (seconds)
