Split the rendercache and pagecache.
The pagecache and rendercache have very different usage profiles.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -148,9 +148,8 @@ memcaches = 127.0.0.1:11211
 # caches to use for locking
 lockcaches = 127.0.0.1:11211
 stalecaches =
-# render caches (the second is "remote" and the local is optional but in the same format)
-local_rendercache =
 rendercaches = 127.0.0.1:11211
+pagecaches = 127.0.0.1:11211
 
 # -- permacache options --
 # permacache is memcaches -> cassanda -> memcachedb
