Add small front page gold advertisement.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -557,3 +557,7 @@ spotlight_interest_nosub_p = .1
 # map of comment tree version to how frequently it should be chosen relative to
 # the others
 comment_tree_version_weights = 1:1, 2:0
+# message blurbs for the front page sidebar gold ad.
+# use a '|' character to separate the title line from the smaller aside.
+# in the title line, '%(reddit_gold)s' will be replaced by a link.
+goldvertisement_blurbs = "Make reddit better. Try %(reddit_gold)." "This year, give the gift of %(reddit_gold)s.|(and you should probably also give some other, better gifts)"
