Whisper sweet nothings to the goldmembers.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -560,3 +560,4 @@ comment_tree_version_weights = 1:1, 2:0
 # markdown message blurbs for the front page sidebar gold ad.
 # use **strong** markup for a larger font, and "  \n" (<br>) to separate lines.
 goldvertisement_blurbs = "Make reddit better. Try %(reddit_gold)." "This year, give the gift of %(reddit_gold)s.|(and you should probably also give some other, better gifts)"
+goldvertisement_has_gold_blurbs = "**&ldquo;Exquisite!&rdquo;**  \nGrab a drink and join us in [the lounge](/r/lounge)."
