Limit the number of campaigns per promoted link

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -316,6 +316,7 @@ ad_domain = http://reddit.local
 allowed_pay_countries = United States, United Kingdom, Canada
 sponsors =
 selfserve_support_email = selfservesupport@mydomain.com 
+MAX_CAMPAIGNS_PER_LINK = 100
 
 # authorize.net credentials (blank authorizenetapi to disable)
 authorizenetapi =
