Make it possible to run all automated tests via `nosetests`.
This setup assumes the existence of a `test.ini` file. No current tests
mutate backend state, but that may happen in the future so don't make
your test.ini point at production!

--- a/r2/setup.cfg
+++ b/r2/setup.cfg
@@ -33,6 +33,9 @@ settings = no_about=true
 doc-dir=r2/docs/html
 make-dirs=1
 
+[nosetests]
+where = r2/tests/
+
 [extract_messages]
 add_comments = TRANSLATORS:
 keywords =  P_:1,2 _md
