Coinbase payments for reddit gold.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -77,6 +77,22 @@ STRIPE_WEBHOOK_SECRET =
 STRIPE_PUBLIC_KEY =
 STRIPE_SECRET_KEY =
 
+COINBASE_WEBHOOK_SECRET =
+COINBASE_BUTTONID_ONETIME_1MO =
+COINBASE_BUTTONID_ONETIME_2MO =
+COINBASE_BUTTONID_ONETIME_3MO =
+COINBASE_BUTTONID_ONETIME_4MO =
+COINBASE_BUTTONID_ONETIME_5MO =
+COINBASE_BUTTONID_ONETIME_6MO =
+COINBASE_BUTTONID_ONETIME_7MO =
+COINBASE_BUTTONID_ONETIME_8MO =
+COINBASE_BUTTONID_ONETIME_9MO =
+COINBASE_BUTTONID_ONETIME_10MO =
+COINBASE_BUTTONID_ONETIME_11MO =
+COINBASE_BUTTONID_ONETIME_1YR =
+COINBASE_BUTTONID_ONETIME_2YR =
+COINBASE_BUTTONID_ONETIME_3YR =
+
 # -- feature toggles --
 disable_ads = false
 disable_captcha = false
