Stripe payments for reddit gold.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -73,6 +73,10 @@ GOOGLE_KEY =
 GOOGLE_REQUEST_URL = https://checkout.google.com/api/checkout/v2/request/Merchant/
 GOOGLE_REPORT_URL = https://checkout.google.com/api/checkout/v2/reports/Merchant/
 
+STRIPE_WEBHOOK_SECRET =
+STRIPE_PUBLIC_KEY =
+STRIPE_SECRET_KEY =
+
 # -- feature toggles --
 disable_ads = false
 disable_captcha = false
