--- a/r2/example.ini
+++ b/r2/example.ini
@@ -359,7 +359,7 @@ allowed_css_linked_domains = static.reddit.com, www.reddit.com, reallystatic.red
 # max number of uploaded images per subreddit
 max_sr_images = 50
 # default stylesheet and it's rtl version
-stylesheet = reddit.css
+stylesheet = reddit.less
 stylesheet_rtl = reddit-rtl.css
 # location of the static directory
 static_path = /static/
