--- a/upstart/reddit-job-hourly_traffic.conf
+++ b/upstart/reddit-job-hourly_traffic.conf
@@ -9,5 +9,5 @@ nice 10
 script
     . /etc/default/reddit
     d=`date -u +"%Y-%m-%d-%H" -d '1 hour ago'`
-    wrap-job paster run $REDDIT_INI -c 'from r2.lib.traffic import process_hour; process_hour(\"$d\")'
+    wrap-job paster run $REDDIT_INI -c "from r2.lib.traffic import process_hour; process_hour(\"$d\")"
 end script
