--- a/upstart/reddit-job-hourly_traffic.conf
+++ b/upstart/reddit-job-hourly_traffic.conf
@@ -1,5 +1,7 @@
 description "process hourly traffic logs on EMR"
 
+instance $slice
+
 manual
 task
 stop on reddit-stop or runlevel [016]
@@ -8,6 +10,5 @@ nice 10
 
 script
     . /etc/default/reddit
-    d=`date -u +"%Y-%m-%d-%H" -d '1 hour ago'`
-    wrap-job paster run $REDDIT_INI -c "from r2.lib.traffic import process_hour; process_hour(\"$d\")"
+    wrap-job paster run $REDDIT_INI -c "from r2.lib.traffic import process_hour; process_hour(\"$slice\")"
 end script
