--- a/r2/example.ini
+++ b/r2/example.ini
@@ -180,7 +180,7 @@ rec_cache = 127.0.0.1:11211
 
 ## -- traffic tracking urls --
 # domain to send tracking requests (see scripts/tracker.py)
-tracking_domain = reddit.local
+fetch_trackers_url = http://reddit.local/fetch-trackers
 # image to render to track pageviews
 tracker_url = /static/pixel.png
 # images to render to track sponsored links
