Allow boto to gather AWS credentials from alternate sources.
If the relevant configuration options are left blank in the ini file, we
will pass None to boto for credentials allowing it to look in other
places, including the AWS instance metadata used by Roles for EC2.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -391,7 +391,9 @@ useragent = Mozilla/5.0 (compatible; redditbot/1.0; +http://www.reddit.com/feedb
 #      s3 - Uses Amazon S3 to upload media to buckets
 media_store = s3
 
-# your s3 credentials
+# your s3 credentials -- if these are left blank, we'll pass None to
+# boto which will trigger it to look in various places, including instance
+# metadata if on ec2, for credentials.
 S3KEY_ID = 
 S3SECRET_KEY = 
 
