Use WebError Reporter objects for exception logging.
This brings log_q reporting and logging-based reporting (syslog)
together into one place as WebOb error reporters.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -27,8 +27,6 @@ reload_templates = true
 uncompressedJS = true
 # enable/disable verbose SQL printing 
 sqlprinting = false
-# enable/disable writing errors as they occur to a rabbit-mq queue
-exception_logging = false
 # whether to print a "reddit app started" message at start"
 log_start = true
 # enable/disable logging for amqp/rabbitmq
@@ -39,6 +37,11 @@ read_only_mode = false
 heavy_load_mode = false
 # directory to write cProfile stats dumps to (disabled if not set)
 profile_directory =
+# exception reporter objects to give to ErrorMiddleware (see log.py)
+error_reporters =
+# should we force a re-parse of this file with logging.config.fileConfig?
+# older versions of uwsgi (<1.1) didn't do this step so we'd never log!
+old_uwsgi_load_logging_config = false
 
 # the site's tagline, used in the title and description
 short_description = open source is awesome
@@ -499,6 +502,31 @@ beaker.session_secret = somesecret
 # Debug mode will enable the interactive debugging tool, allowing ANYONE to
 # execute malicious code after an exception is raised.
 #set debug = false
+
+[loggers]
+keys = root, pycountry
+
+[logger_root]
+level = WARNING
+handlers = console
+
+[logger_pycountry]
+level = CRITICAL
+qualname = pycountry.db
+handlers =
+
+[handlers]
+keys = console
+
+[handler_console]
+class = StreamHandler
+args = (sys.stdout,)
+
+[formatters]
+keys = reddit
+
+[formatter_reddit]
+format = %(message)s
 
 # the following configuration section makes up the "live" config. if zookeeper
 # is enabled, then this configuration will be found by the app in zookeeper. to
