RedditGifts gold controller.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -93,6 +93,8 @@ COINBASE_BUTTONID_ONETIME_1YR =
 COINBASE_BUTTONID_ONETIME_2YR =
 COINBASE_BUTTONID_ONETIME_3YR =
 
+RG_SECRET =
+
 # -- feature toggles --
 disable_ads = false
 disable_captcha = false
