Add an optional paste-filter compatible Gzipping middleware.
The paste-supplied gzip middleware is primarily for testing and is
insufficient in that it:

1) is unable to require a minimum size for gzipping
2) does not correctly add the "Vary: Accept-Encoding" header

it is also somewhat difficult to add those features given its structure.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -525,6 +525,13 @@ beaker.session_secret = somesecret
 # execute malicious code after an exception is raised.
 #set debug = false
 
+filter-with = gzip
+
+[filter:gzip]
+use = egg:r2#gzip
+compress_level = 6
+min_size = 800
+
 [loggers]
 keys = root, pycountry
 
