--- a/r2/example.ini
+++ b/r2/example.ini
@@ -508,6 +508,9 @@ wiki_max_page_separators = 3
 #   Pro tip: Use /dev/shm for in-memory diff3
 diff3_temp_location =
 
+# Template names to record render timings for
+timed_templates = Reddit, Link, Comment, LinkListing, NestedListing, SubredditTopBar
+
 [server:main]
 use = egg:Paste#http
 host = 0.0.0.0
