--- a/r2/example.ini
+++ b/r2/example.ini
@@ -370,6 +370,10 @@ static_path = /static/
 # if not set, no domain will be specified
 static_domain =
 static_secure_domain =
+# if set, stylesheets will be sourced from these domains
+# if not set, stylesheets will use the default static_domain
+static_sr_stylesheet_domain =
+static_secure_sr_stylesheet_domain =
 # if this is true, append .gz to CSS and JS files served from the static domain
 # this is for hosts that don't do on-the-fly gzipping (e.g. s3)
 static_pre_gzipped = false
