Privacy policy and user agreement viewer.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -505,6 +505,10 @@ wiki_max_page_separators = 3
 #   Pro tip: Use /dev/shm for in-memory diff3
 diff3_temp_location =
 
+# -- policy wiki pages --
+wiki_page_privacy_policy = privacypolicy
+wiki_page_user_agreement = useragreement
+
 # Template names to record render timings for
 timed_templates = Reddit, Link, Comment, LinkListing, NestedListing, SubredditTopBar
 
