--- a/r2/example.ini
+++ b/r2/example.ini
@@ -508,6 +508,7 @@ diff3_temp_location =
 # -- policy wiki pages --
 wiki_page_privacy_policy = privacypolicy
 wiki_page_user_agreement = useragreement
+wiki_page_registration_info = registration_info
 
 # Template names to record render timings for
 timed_templates = Reddit, Link, Comment, LinkListing, NestedListing, SubredditTopBar
