Sell campaigns by CPM.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -315,6 +315,7 @@ allowed_pay_countries = United States, United Kingdom, Canada
 sponsors =
 selfserve_support_email = selfservesupport@mydomain.com 
 MAX_CAMPAIGNS_PER_LINK = 100
+cpm_selfserve = 1.00
 
 # authorize.net credentials (blank authorizenetapi to disable)
 authorizenetapi =
