Add intro widget to listing chooser with sample multireddits.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -526,6 +526,9 @@ wiki_page_registration_info = registration_info
 # Template names to record render timings for
 timed_templates = Reddit, Link, Comment, LinkListing, NestedListing, SubredditTopBar
 
+# sample multireddits (displayed when a user has no multis)
+sample_multis = /user/reddit/m/hello, /user/reddit/m/world
+
 [server:main]
 use = egg:Paste#http
 host = 0.0.0.0
