Add support for a live-config sidebar info message.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -574,6 +574,8 @@ frontpage_dart = false
 fastlane_links =
 # a message placed in the infobar
 announcement_message =
+# an info message placed in the sidebar
+sidebar_message =
 # spotlight links for subreddit discovery
 sr_discovery_links = 
 # probability of the subreddit suggester showing up in the spotlight box
