Add gold-specific sidebar message.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -576,6 +576,8 @@ fastlane_links =
 announcement_message =
 # an info message placed in the sidebar
 sidebar_message =
+# an info message placed in the sidebar for gold users
+gold_sidebar_message =
 # spotlight links for subreddit discovery
 sr_discovery_links = 
 # probability of the subreddit suggester showing up in the spotlight box
