Use an ad server to select promos for spotlight.
Replaces client side weighted random selection.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -316,6 +316,7 @@ sponsors =
 selfserve_support_email = selfservesupport@mydomain.com 
 MAX_CAMPAIGNS_PER_LINK = 100
 cpm_selfserve = 1.00
+adserver_click_domain = 
 
 # authorize.net credentials (blank authorizenetapi to disable)
 authorizenetapi =
