--- a/r2/example.ini
+++ b/r2/example.ini
@@ -344,6 +344,10 @@ TRAFFIC_LOG_HOSTS =
 # this helps with lock contention but isn't necessary on smaller sites
 shard_link_vote_queues = false
 
+# should we split comment tree processing into shards based on the link id?
+# this helps with lock contention but isn't necessary on smaller sites
+shard_commentstree_queues = false
+
 # list of cnames allowed to render as reddit.com without a frame
 authorized_cnames = 
 
