Add new dedicated memoize cache pool and start dual-writing.
Memoize creates very large objects that take up lots of space
and has weird behaviour when it gets evicted. We get some isolation
and monitoring by moving it to its own pool. Since it is sensitive
to split-brain stuff, we start out here by dual-writing to the new
pool.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -160,6 +160,8 @@ admin_message_acct = reddit
 # data cache (used for caching Thing objects)
 num_mc_clients = 5
 memcaches = 127.0.0.1:11211
+# caches used for @memoize decorator magic
+memoizecaches = 127.0.0.1:11211
 # caches to use for locking
 lockcaches = 127.0.0.1:11211
 stalecaches =
