Allow a maximum of 50 pending mod invites.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -480,6 +480,7 @@ sr_contributor_quota = 10000
 sr_wikibanned_quota = 10000
 sr_wikicontributor_quota = 10000
 sr_quota_time = 7200
+sr_invite_limit = 25
 
 # -- email --
 # smtp server
