Allow ratelimited user agents to have individual limits.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -475,7 +475,9 @@ sr_dropdown_threshold = 15
 # seconds of each other
 comment_visits_period = 600
 
-#user-agents to rate-limit
+# user-agents to rate-limit with number of requests every ten seconds
+# To limit GoogleBot to 10 requests and AppEngine to 2 requests and AppEngine to 2 requests every 10 seconds
+# agents = googlebot:10, appengine:2
 agents = 
 # subreddit ratelimits
 sr_banned_quota = 10000
