Add employees to example.ini

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -531,6 +531,9 @@ timed_templates = Reddit, Link, Comment, LinkListing, NestedListing, SubredditTo
 # sample multireddits (displayed when a user has no multis)
 sample_multis = /user/reddit/m/hello, /user/reddit/m/world
 
+# employees that aren't admins or sponsors (Free gilding, admin distinguish, traffic viewing, etc.)
+employees =
+
 [server:main]
 use = egg:Paste#http
 host = 0.0.0.0
