--- a/r2/example.ini
+++ b/r2/example.ini
@@ -528,9 +528,6 @@ wiki_page_registration_info = registration_info
 # Template names to record render timings for
 timed_templates = Reddit, Link, Comment, LinkListing, NestedListing, SubredditTopBar
 
-# sample multireddits (displayed when a user has no multis)
-sample_multis = /user/reddit/m/hello, /user/reddit/m/world
-
 # employees that aren't admins or sponsors (Free gilding, admin distinguish, traffic viewing, etc.)
 employees =
 
@@ -611,3 +608,5 @@ comment_tree_version_weights = 1:1, 2:0
 # use **strong** markup for a larger font, and "  \n" (<br>) to separate lines.
 goldvertisement_blurbs = "Make reddit better. Try %(reddit_gold)." "This year, give the gift of %(reddit_gold)s.|(and you should probably also give some other, better gifts)"
 goldvertisement_has_gold_blurbs = "**&ldquo;Exquisite!&rdquo;**  \nGrab a drink and join us in [the lounge](/r/lounge)."
+# sample multireddits (displayed when a user has no multis)
+listing_chooser_sample_multis = /user/reddit/m/hello, /user/reddit/m/world
