--- a/r2/example.ini
+++ b/r2/example.ini
@@ -610,3 +610,5 @@ goldvertisement_blurbs = "Make reddit better. Try %(reddit_gold)." "This year, g
 goldvertisement_has_gold_blurbs = "**&ldquo;Exquisite!&rdquo;**  \nGrab a drink and join us in [the lounge](/r/lounge)."
 # sample multireddits (displayed when a user has no multis)
 listing_chooser_sample_multis = /user/reddit/m/hello, /user/reddit/m/world
+# multi of subreddits to share with gold users
+listing_chooser_gold_multi = /user/reddit/m/gold
