--- a/r2/example.ini
+++ b/r2/example.ini
@@ -612,3 +612,5 @@ goldvertisement_has_gold_blurbs = "**&ldquo;Exquisite!&rdquo;**  \nGrab a drink 
 listing_chooser_sample_multis = /user/reddit/m/hello, /user/reddit/m/world
 # multi of subreddits to share with gold users
 listing_chooser_gold_multi = /user/reddit/m/gold
+# subreddit showcasing new multireddits
+listing_chooser_explore_sr = multis
