Web frontend logging.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -604,6 +604,8 @@ spotlight_interest_nosub_p = .1
 # map of comment tree version to how frequently it should be chosen relative to
 # the others
 comment_tree_version_weights = 1:1, 2:0
+# enables/disables client side logging POSTs to /web/log/...
+frontend_logging = true
 # markdown message blurbs for the front page sidebar gold ad.
 # use **strong** markup for a larger font, and "  \n" (<br>) to separate lines.
 goldvertisement_blurbs = "Make reddit better. Try %(reddit_gold)." "This year, give the gift of %(reddit_gold)s.|(and you should probably also give some other, better gifts)"
