Start writing HTTPS-friendly subreddit stylesheets.
This does several things to subreddit stylesheets:
- stores them on the thumbs buckets rather than the main static bucket.
  (this was not desirable before on reddit.com due to CDN configuration)
- enforces a new restriction of custom (%%style%%) images only in
  stylesheets to make secure urls easier to resolve. existing subreddits
  are grandfathered in for now.
- writes, if possible as above, a second stylesheet that references
  subreddit images over https.

At some point in the future, the thumbs buckets should be directly accessible
on HTTPS via the same URLs which would remove the need for the second
stylesheet to be created and uploaded. The custom image rules and other changes
would still be good.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -381,6 +381,8 @@ static_secure_pre_gzipped = false
 # which s3 bucket to place subreddit styles on (when empty, stylesheets will be served
 # from the local database instead.
 static_stylesheet_bucket =
+# whether or not to put subreddit stylesheets on the thumbnail s3 buckets
+subreddit_stylesheets_static = false
 
 # subreddit used for DMCA takedowns
 takedown_sr = _takedowns
