Future date limit on creating campaigns.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -327,6 +327,7 @@ authorizenetkey =
 min_promote_bid = 20
 max_promote_bid = 9999
 min_promote_future = 2
+max_promote_future = 93
 
 # traffic log processing
 TRAFFIC_ACCESS_KEY =
