--- a/r2/example.ini
+++ b/r2/example.ini
@@ -563,16 +563,11 @@ compress_level = 6
 min_size = 800
 
 [loggers]
-keys = root, pycountry
+keys = root
 
 [logger_root]
 level = WARNING
 handlers = console
-
-[logger_pycountry]
-level = CRITICAL
-qualname = pycountry.db
-handlers =
 
 [handlers]
 keys = console
