--- a/r2/example.ini
+++ b/r2/example.ini
@@ -611,3 +611,5 @@ listing_chooser_sample_multis = /user/reddit/m/hello, /user/reddit/m/world
 listing_chooser_gold_multi = /user/reddit/m/gold
 # subreddit showcasing new multireddits
 listing_chooser_explore_sr = 
+# historical cost to run a reddit server
+pennies_per_server_second = 1970/1/1:1
